add_subdirectory("dns")
add_subdirectory("helloworld")
add_subdirectory("idle-basic")
add_subdirectory("idle-data")
add_subdirectory("interfaces")
add_subdirectory("onchange")
add_subdirectory("tcp-echo-server")
add_subdirectory("udp-dhcp")
add_subdirectory("uvcat")
add_subdirectory("uvtee")
add_subdirectory("uvtee-buf-count")
add_subdirectory("uvtee-loop-info")
